--- a/src/app/game-menu/game-menu.component.css
+++ b/src/app/game-menu/game-menu.component.css
@@ -34,9 +34,8 @@ button{
 
     font-size: 30px;
 
-    border-width:5px;
+    border: 5px white solid;
     border-radius:20px;
-    border-color: white;
 
     background-color: #B6D1D7;
 }
